Team Banner and Footer alignment  fix

--- a/src/Styles/Banner.scss
+++ b/src/Styles/Banner.scss
@@ -4,6 +4,7 @@
     margin-left: -15px;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     height: 500px;
     overflow: hidden;
 }
